--- a/src/app/summary-table/summary-table.component.css
+++ b/src/app/summary-table/summary-table.component.css
@@ -1,7 +1,3 @@
-#div_main {
-  display: flex;
-}
-
 #div_table {
   overflow-y: auto;
   margin-right: 1px;
@@ -10,11 +6,11 @@
 
 #div_table_gridview {
   overflow-y: auto;
-  height: calc(100% - 30px);
+  height: 100%;
 }
 
-table {
-  margin-left: 5px;
+.mat-mdc-table {
+  min-width: 1%;
 }
 
 th {
