fixed unit tests

--- a/src/app/scene/scene.component.html
+++ b/src/app/scene/scene.component.html
@@ -1,8 +1,8 @@
 <button id="butHome" mat-icon-button matTooltip="Front Page" [routerLink]="[urlFront]">
-  <mat-icon>home</mat-icon>
+  <mat-icon style="color: white;">home</mat-icon>
 </button>
 <button id="butScenes" *ngIf="scenesExist" mat-icon-button matTooltip="Scenes" [routerLink]="[urlScenes]">
-  <mat-icon>collections</mat-icon>
+  <mat-icon style="color: white;">collections</mat-icon>
 </button>
 <mat-card appearance="outlined">
   <mat-card-header>
