--- a/src/app/scenes/scenes.component.html
+++ b/src/app/scenes/scenes.component.html
@@ -1,8 +1,8 @@
 <button id="butHome" mat-icon-button matTooltip="Front Page" [routerLink]="[urlFront]">
-  <mat-icon>home</mat-icon>
+  <mat-icon style="color: white;">home</mat-icon>
 </button>
 <button id="butScene" mat-icon-button matTooltip="Add Scene" [routerLink]="[urlScene]">
-  <mat-icon>add_photo_alternate</mat-icon>
+  <mat-icon style="color: white;">add_photo_alternate</mat-icon>
 </button>
 <mat-card appearance="outlined" id="mat_card_active_scene" *ngIf="activeScene">
   <mat-card-header>
