--- a/src/app/main-toolbar/value-filter/value-filter.component.css
+++ b/src/app/main-toolbar/value-filter/value-filter.component.css
@@ -13,7 +13,7 @@ button {
    padding-left: 5px;
 }
 
-.column_filter_value {
+.div_column_filter_value {
    display: flex;
    flex-direction: column;
 }
