--- a/src/app/main-toolbar/value-filter/value-filter.component.html
+++ b/src/app/main-toolbar/value-filter/value-filter.component.html
@@ -16,8 +16,8 @@
     </button>
   </mat-menu>
 
-  <div class="column_filter_value" *ngIf="!isEqualBoolean() && !filter.operator.endsWith('empty')">
-    <input matInput type="search" placeholder="Filter Value" [matTooltip]="valueFilterCustomizer.tooltipOf(filter)"
+  <div class="div_column_filter_value" *ngIf="!isEqualBoolean() && !filter.operator.endsWith('empty')">
+    <input id="column_filter_input" matInput type="search" placeholder="Filter Value" [matTooltip]="valueFilterCustomizer.tooltipOf(filter)"
            (input)="onValueChanged($event.target.value)" [formControl]="valueControl" [koiaFilterValueInput]="filter" (search)="onChange.emit()">
     <mat-error *ngIf="valueControl.invalid">{{ valueControl.getError('error') }}</mat-error>
   </div>
