replaced deprecated Observable#toPromise

--- a/src/app/shared/component/view-launcher-dialog/view-launcher-dialog.component.css
+++ b/src/app/shared/component/view-launcher-dialog/view-launcher-dialog.component.css
@@ -1,6 +1,12 @@
 #div_views {
    max-height: 200px;
-   overflow: auto;   
+   overflow: auto;
+}
+
+.div_row {
+   display: flex;
+   align-items: center;
+   overflow-y: hidden;
 }
 
 #div_close_button {
