--- a/src/app/graph/graph-side-bar/graph-side-bar.component.html
+++ b/src/app/graph/graph-side-bar/graph-side-bar.component.html
@@ -57,21 +57,24 @@
 
       <koia-expansion-panel [title]="'Position ' + (gridColumns ? ' & Size' : '')">
          <mat-form-field class="field_small_integer" *ngIf="gridColumns">
-            <mat-select placeholder="Columns" [value]="context.gridColumnSpan">
+            <mat-label>Columns</mat-label>
+            <mat-select [value]="context.gridColumnSpan">
                <mat-option *ngFor="let span of gridColumnSpans" [value]="span" (click)="context.gridColumnSpan = span">
                   {{ span }}
                </mat-option>
             </mat-select>
          </mat-form-field>
          <mat-form-field class="field_small_integer" *ngIf="gridColumns">
-            <mat-select placeholder="Rows" [value]="context.gridRowSpan">
+            <mat-label>Rows</mat-label>
+            <mat-select [value]="context.gridRowSpan">
                <mat-option *ngFor="let span of gridRowSpans" [value]="span" (click)="context.gridRowSpan = span">
                   {{ span }}
                </mat-option>
             </mat-select>
          </mat-form-field>
          <mat-form-field class="field_small_integer">
-            <mat-select placeholder="Position" [value]="elementPosition">
+            <mat-label>Position</mat-label>
+            <mat-select [value]="elementPosition">
                <mat-option *ngFor="let position of elementPositions" [value]="position" (click)="setElementPosition(position)">
                   {{ position }}
                </mat-option>
