--- a/src/app/pivot-table/pivot-table-side-bar/pivot-table-side-bar.component.css
+++ b/src/app/pivot-table/pivot-table-side-bar/pivot-table-side-bar.component.css
@@ -9,12 +9,13 @@ label {
 
 input {
   text-align: right;
+  width: 50%;
 }
 
 .icon_remove {
   margin-left: 5px;
   cursor: pointer;
-  opacity: 0.2;
+  opacity: 0.8;
 }
 
 .icon_remove:hover {
@@ -25,8 +26,8 @@ input {
   box-sizing: border-box;
   border-radius: 4px;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-              0 8px 10px 1px rgba(0, 0, 0, 0.14),
-              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    0 8px 10px 1px rgba(0, 0, 0, 0.14),
+    0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .cdk-drag-placeholder {
