--- a/src/app/scene/scene.component.html
+++ b/src/app/scene/scene.component.html
@@ -186,8 +186,8 @@
           <mat-error *ngIf="maxItemsToLoadControl.invalid">{{ 'Exp. 1-' + maxItemsPerScene }}</mat-error>
         </mat-form-field>
         &nbsp;
-        <mat-slide-toggle [(ngModel)]="abortDataloadOnError"
-                          matTooltip="Abort loading data when inconsitent data is encountered">Abort on data error
+        <mat-slide-toggle [(ngModel)]="abortDataloadOnError" matTooltip="Abort loading data when inconsitent data is encountered">
+          Abort on data error
         </mat-slide-toggle>
       </span>
     </div>
