--- a/src/app/chart/chart-side-bar/chart-side-bar.component.css
+++ b/src/app/chart/chart-side-bar/chart-side-bar.component.css
@@ -42,11 +42,6 @@ button {
   margin: 0px;
 }
 
-/* TODO(mdc-migration): The following rule targets internal classes of radio that may no longer apply for the MDC version. */
-mat-radio-button {
-  margin: 5px;
-}
-
 .div_column_swap_list {
   width: 100%;
   margin: 0 25px 25px 0;
@@ -73,6 +68,10 @@ mat-radio-button {
   justify-content: space-between;
   box-sizing: border-box;
   cursor: move;
+}
+
+mat-form-field {
+  min-width: 7em;
 }
 
 .cdk-drag-preview {
