--- a/src/app/raw-data/raw-data.component.css
+++ b/src/app/raw-data/raw-data.component.css
@@ -50,9 +50,13 @@ td {
   background-color: #efefef;
 }
 
-/* TODO(mdc-migration): The following rule targets internal classes of paginator that may no longer apply for the MDC version. */
 .mat-paginator-sticky {
   position: sticky;
   bottom: 0px;
   z-index: 10;
+}
+
+/* inspired by https://stackoverflow.com/a/75258592/2358409 */
+::ng-deep .mdc-notched-outline>* {
+  border: none !important;
 }
